[project]
name = "ai-launchpad"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = ["requests>=2.31.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report term-missing --cov-fail-under 90"
python_files = "tests/test_*.py"
